--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 	
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="javascripts/main.js"></script>
+	<script src="javascripts/DOMDriver.js"></script>
 </body>
 </html>
