--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
+	<div id="treeHeightsArea">
+		
+	</div>
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="javascripts/main.js"></script>
 	<script src="javascripts/DOMDriver.js"></script>
